@@ -1364,11 +1364,16 @@ extern "C" {
 #define WM_MDITILE 550
 #define WM_MEASUREITEM 44
 #if (WINVER >= 0x0500)
+#define WM_GETOBJECT 0x003D
+#define WM_CHANGEUISTATE 0x0127
+#define WM_UPDATEUISTATE 0x0128
+#define WM_QUERYUISTATE 0x0129
 #define WM_UNINITMENUPOPUP 0x0125
 #define WM_MENURBUTTONUP 290
 #define WM_MENUCOMMAND 0x0126
 #define WM_MENUGETOBJECT 0x0124
 #define WM_MENUDRAG 0x0123
+#define WM_APPCOMMAND 0x0319
 #endif
 #define WM_MENUCHAR 288
 #define WM_MENUSELECT 287
@@ -1484,6 +1489,22 @@ extern "C" {
 #endif
 #define WM_MOUSEHOVER	0x2A1
 #define WM_MOUSELEAVE	0x2A3
+#if (WINVER >= 0x0400)
+#define WM_IME_CHAR 0x0286
+#define WM_IME_COMPOSITION 0x010F
+#define WM_IME_COMPOSITIONFULL 0x0284
+#define WM_IME_CONTROL 0x0283
+#define WM_IME_ENDCOMPOSITION 0x010E
+#define WM_IME_KEYDOWN 0x0290
+#define WM_IME_KEYUP 0x0291
+#define WM_IME_NOTIFY 0x0282
+#define WM_IME_SELECT 0x0285
+#define WM_IME_SETCONTEXT 0x0281
+#define WM_IME_STARTCOMPOSITION 0x010D
+#endif
+#if (_WIN32_WINNT >= 0x0500)
+#define WM_IME_REQUEST 0x0288
+#endif
 #if (_WIN32_WINNT >= 0x0400)
 #define WHEEL_DELTA 120
 #define GET_WHEEL_DELTA_WPARAM(wparam) ((short)HIWORD (wparam))
@@ -1594,6 +1615,10 @@ extern "C" {
 #define EM_SETTABSTOPS 203
 #define EM_SETWORDBREAKPROC 208
 #define EM_UNDO 199
+#if (WINVER >= 0x0500)
+#define EM_GETIMESTATUS 217
+#define EM_SETIMESTATUS 216
+#endif
 #define EN_CHANGE 768
 #define EN_ERRSPACE 1280
 #define EN_HSCROLL 1537
@@ -2309,6 +2334,10 @@ extern "C" {
 #if (_WIN32_WINNT >= 0x0500 || _WIN32_WINDOWS >= 0x0490)
 #define GMMP_USE_DISPLAY_POINTS 1
 #define GMMP_USE_HIGH_RESOLUTION_POINTS 2
+#endif
+#if (_WIN32_WINNT >= 0x0500)
+#define XBUTTON1 0x0001
+#define XBUTTON2 0x0002
 #endif
 #if (_WIN32_WINNT >= 0x0501)
 #define PW_CLIENTONLY 0x00000001
